updated visualization with new Kurt file